--- a/.github/workflows/update-quote.yml
+++ b/.github/workflows/update-quote.yml
@@ -25,9 +25,6 @@ jobs:
           sed -i "/<!--START_SECTION:quote-->/,/<!--END_SECTION:quote-->/c\\<!--START_SECTION:quote-->\n> \"$QUOTE\"\n<!--END_SECTION:quote-->" README.md
 
       - name: Commit & Push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add README.md
-          git commit -m "chore: update random quote" || echo "No changes"
-          git push
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "chore: update random quote"
